subprojects/pclc/test/errors/undefined_call.pcl
// RUN: not pclc %s | tee %t.stdout

a(5);
